# homehelper

./: Cargo.toml  README.md  crashout.txt
src/: main.rs
src/daemon/: mod.rs  remote.rs  submap.rs
src/daemon/commands/: hyprctl.rs  listen_eww.rs  mod.rs
src/hyprctl/: binds.rs  mod.rs  monitors.rs  notify.rs  socket2.rs  workspaces.rs
src/submap/: mod.rs
