[package]
name = "homehelper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ciborium = "0.2.2"
clap = { version = "4.5.40", features = ["derive"] }
ctrlc = "3.4.7"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
